hphp/hack/test/typecheck/switch/multiple_errors.php.exp
File "multiple_errors.php", line 7, characters 5-12:
Default case in `switch` must be terminal (Parsing[1002])
File "multiple_errors.php", line 7, characters 5-12:
There can be only one `default` case in `switch` (Parsing[1002])
